# mlsv2024

./: README.md  pyproject.toml
Código/: model_pipeline_obesidadgb.joblib
